# AleStella

./: README.md
ICP/: CMakeLists.txt  ICPgerarchico.cpp
clustering/: cluster_extraction.cpp
grabber/: README  openni_grabber.cpp
viewer/: cloudviewer.cpp
